--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <p>MIT License - See LICENSE file for details</p>
 
     <h2>Author</h2>
-    <p>[Your Name] - Original implementation of the ZIP-based YOLO export for VIA</p>
+    <p>[Hermona Addisu] - Original implementation of the ZIP-based YOLO export for VIA</p>
 
     <h2>Acknowledgments</h2>
     <ul>
